[package]
name = "wasm3d"
version = "0.1.0"
authors = ["Leah <me@hrmny.pw>"]

[dependencies]
stdweb = "0.4"
stdweb-derive = "0.4"
serde = "1.0"
serde_derive = "1.0"
rand = { version ="0.5", features=["stdweb"] }
cgmath = "0.16"
gltf = "0.11.2"
bitflags = "1.0.4"

[dependencies.image]
version = "0.19"
default-features = false
features = ["png_codec", "tga", "jpeg"]

[build-dependencies]
webgl_generator = "0.1.0"

[patch.crates-io]
gltf = { git = "https://github.com/ForsakenHarmony/gltf.git" }
